--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "typechain": "^8.3.1"
   },
   "dependencies": {
-    "@chainlink/contracts": "0.8.0",
+    "@chainlink/contracts": "^0.8.0",
+    "@chainlink/contracts-ccip": "^0.7.3",
+    "@chainlink/env-enc": "^1.0.5",
     "@openzeppelin/contracts": "5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
