fix: update env variables

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ ETHERSCAN_API_KEY=
 BASESCAN_API_KEY=
 INFURA_API_KEY=
 
-ROUTER=
-ENTRY_POINT=
-LINK=
+BASE_ROUTER=
+LINK_ON_BASE=
+ARBITRUM_ROUTER=
+ENTRY_POINT_ARBITRUM=
